--- a/workguru-ui/src/app/core/navbar/navbar.component.html
+++ b/workguru-ui/src/app/core/navbar/navbar.component.html
@@ -12,12 +12,15 @@
       <div class="dropdown-content">
         <a href="">Meu Perfil</a>
         <a href="">Minhas Vagas</a>
+        <div *ngIf="auth.hasPermission('ROLE_REGISTER_JOB')">
+          <a routerLink="/jobs/new">Nova Vaga</a>
+        </div>
         <a href="javascript:;" (click)="logout()">Sair</a>
       </div>
     </section>
   </div>
 
-    
+
 
 
 
