--- a/workguru-ui/src/app/enterprises/enterprise-register/enterprise-register.component.html
+++ b/workguru-ui/src/app/enterprises/enterprise-register/enterprise-register.component.html
@@ -67,7 +67,7 @@
 
       <div id="btn">
         <div class="button-container">
-          <button pButton type="submit" label="Cadastrar" [disabled]="f.invalid"></button>
+          <button pButton type="submit" label="Cadastrar" ></button>
         </div>
       </div>
 
