--- a/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.css
+++ b/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.css
@@ -9,17 +9,19 @@ h1 {
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.custom-table {
+.custom-table-row {
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
   margin-left: 13%;
   margin-right: 13%;
+  background-color: #e8e9e2;
 }
 
-.custom-table tr{
+.custom-table-row div{
   max-height: 190px;
-  background-color: #e8e9e2;
+  height: 40px;
+  width: 980px;
 }
 
 #title{
@@ -29,13 +31,13 @@ h1 {
   text-align: start;
 }
 
-.custom-table a{
+.custom-table-row a{
   width: 150px;
   border-radius: 20px;
   background: linear-gradient(90deg, #9f28bd,#61085c);
   font-size: 20x;
   margin-left: 64%;
-
+  margin-bottom: 1%;
 }
 
 #level p{
@@ -61,6 +63,7 @@ h1 {
   border-radius: 6px;
   padding: 1px;
   background-color: #cdcec9;
+  height: 65%;
 }
 
 img{
@@ -68,15 +71,11 @@ img{
 }
 
 #img img{
-  width: 110px;
-  height: 125px;
+  width: 100px;
+  height: 100px;
   margin-top: 4%;
 }
 
-tr div{
-  height: 60px;
-  width: 980px;
-}
 
 #level img{
   width: 30px;
