--- a/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.html
+++ b/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.html
@@ -33,52 +33,37 @@
   <hr>
 
 
-          <p-table [value]="jobs" responsiveLayout="stack" [breakpoint]="'768px'">
-            <ng-template pTemplate="body" let-job >
-              <div class="custom-table">
-                <tr>
-                  <div id="img">
-                    <img src="assets/level_icon.png">
-                      <p id="title">
-                          <strong>{{ job.title }}</strong>
-                      </p>
-                  </div>
-                    <div id="tags">
-                      <strong><p>Tags</p></strong>
-                      <p id="tec">
-                        {{ job.tecnology }}
-                      </p>
-                    </div>
-
-                  <div id="level">
-                    <img src="assets/level_icon.png">
-                    <p>
-                      {{ showLevel(job) }}
-                    </p>
-                    <img src="assets/location_icon.png">
-                    <p>
-                      {{ showModel(job) }}
-                    </p>
-
-
-                      <a pButton
-                        [routerLink]="['/jobs', job.id]" label="Ver Vaga"></a>
-
-                  </div>
-                </tr>
-            </div>
-            <br>
-
-
-            </ng-template>
-            <ng-template pTemplate="emptymessage" let-columns>
-              <tr>
-                <td>
-                  Nenhuma vaga cadastrada.
-                </td>
-              </tr>
-            </ng-template>
-          </p-table>
+  <p-table [value]="jobs" responsiveLayout="stack" [breakpoint]="'768px'">
+    <ng-template pTemplate="body" let-job>
+      <div class="custom-table-row">
+        <div id="img">
+          <img src="assets/level_icon.png" />
+          <p id="title">
+            <strong>{{ job.title }}</strong>
+          </p>
+        </div>
+        <div id="tags">
+          <strong><p>Tags</p></strong>
+          <p id="tec">
+            {{ job.tecnology }}
+          </p>
+        </div>
+        <div id="level">
+          <img src="assets/level_icon.png" />
+          <p>{{ showLevel(job) }}</p>
+          <img src="assets/location_icon.png" />
+          <p>{{ showModel(job) }}</p>
+          <a pButton [routerLink]="['/jobs', job.id]" label="Ver Vaga"></a>
+        </div>
+      </div>
+      <br>
+    </ng-template>
+    <ng-template pTemplate="emptymessage">
+      <div class="custom-table-empty">
+        Nenhuma vaga cadastrada.
+      </div>
+    </ng-template>
+  </p-table>
 
         <div class="p-col-12">
           <p><a pButton label="Nova Vaga" routerLink="/jobs/new"></a></p>
