--- a/workguru-ui/src/app/home/home/home.component.css
+++ b/workguru-ui/src/app/home/home/home.component.css
@@ -4,11 +4,6 @@ body {
   padding: 0;
 }
 
-header {
-  background-color: #282c34;
-  color: #fff;
-  padding: 20px;
-}
 
 nav {
   display: flex;
@@ -18,7 +13,7 @@ nav {
 main {
   padding: 40px;
   text-align: center;
-  min-height: 500px;
+  height: 84vh;
 }
 
 button,a {
