--- a/workguru-ui/src/app/jobs/job-register/job-register.component.html
+++ b/workguru-ui/src/app/jobs/job-register/job-register.component.html
@@ -55,10 +55,8 @@
         </div>
 
 
-      <div id="btn">
-        <div class="button-container">
+      <div id="btn" class="button-container">
           <button pButton type="submit" label="Cadastrar"></button>
-        </div>
       </div>
 
 
