correções no filtro de pesquisa e na página de perfil

--- a/workguru-ui/src/app/candidates/candidate-view-profile/candidate-view-profile.component.html
+++ b/workguru-ui/src/app/candidates/candidate-view-profile/candidate-view-profile.component.html
@@ -1,13 +1,13 @@
 <div class="header">
   <div id="img">
     <img src='assets/level_icon.png'>
-    <strong><h1>{{candidate?.name}}</h1></strong>
+    <strong><h1>{{candidate.name}}</h1></strong>
     <a [routerLink]="['/home', candidate.id]" class="p-button p-button-icon-only">
       <i class="pi pi-pen-to-square"></i>
     </a>
   </div>
   <div>
-    <p>ALO GALERA DE COWBOY, ALO GALERA DE PIÃO AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+    <p></p>
   </div>
 </div>
 
