--- a/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.html
+++ b/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.html
@@ -60,7 +60,7 @@
     </ng-template>
     <ng-template pTemplate="emptymessage">
       <div class="custom-table-empty">
-        Nenhuma vaga cadastrada.
+        <p>Nenhuma vaga cadastrada.</p>
       </div>
     </ng-template>
   </p-table>
