--- a/workguru-ui/src/app/candidates/candidate-view-profile/candidate-view-profile.component.html
+++ b/workguru-ui/src/app/candidates/candidate-view-profile/candidate-view-profile.component.html
@@ -2,7 +2,7 @@
   <div id="img">
     <img src='assets/level_icon.png'>
     <strong><h1>{{candidate.name}}</h1></strong>
-    <a [routerLink]="['/home', candidate.id]" class="p-button p-button-icon-only">
+    <a [routerLink]="['/candidates/update', candidate.id]" class="p-button p-button-icon-only">
       <i class="pi pi-pen-to-square"></i>
     </a>
   </div>
