--- a/workguru-ui/src/app/jobs/job-view/job-view.component.html
+++ b/workguru-ui/src/app/jobs/job-view/job-view.component.html
@@ -17,8 +17,11 @@
     </div>
     <p>{{ showSalary(job) }}</p>
     <p>{{ showJobArea(job) }}</p>
-    <a pButton [routerLink]="['/jobs', job.id]" label="Candidatar-se"></a>
+    <div>
+      <a *ngIf="auth.jwtPayload?.user_type === 'P'" pButton [routerLink]="['/jobs', job.id]" label="Candidatar-se"></a>
+    </div>
   </div>
+  
 </div>
 
 <br>
