--- a/workguru-ui/src/app/candidates/candidate-view-profile/candidate-view-profile.component.html
+++ b/workguru-ui/src/app/candidates/candidate-view-profile/candidate-view-profile.component.html
@@ -16,11 +16,11 @@
 <div class="container">
   <div>
     <strong><p>Formação Acadêmica:</p></strong>
-    <p>Abublé</p>
+    <a href="">Adicionar nova formação</a>
   </div>
   <div>
     <strong><p>Histórico Profissional:</p></strong>
-    <p>Lucasond</p>
+    <a href="">Adicionar novo histórico profissional</a>
   </div>
   <div>
     <strong><p>Sobre:</p></strong>
