--- a/workguru-ui/src/app/enterprises/enterprise-update-profile/enterprise-update-profile.component.html
+++ b/workguru-ui/src/app/enterprises/enterprise-update-profile/enterprise-update-profile.component.html
@@ -54,8 +54,8 @@
       <div class="inputs">
         <div class="p-col-12 p-md-6 p-fluid">
           <label>Endereço</label>
-          <input pInputText name="address" type="text"
-          [(ngModel)]="enterprise.address.address" #address="ngModel">
+          <input pInputText name="street" type="text"
+          [(ngModel)]="enterprise.address.street" #street="ngModel">
         </div>
 
         <div class="p-col-12 p-md-6 p-fluid">
