--- a/workguru-ui/src/app/graduations/graduation-register/graduation-register.component.html
+++ b/workguru-ui/src/app/graduations/graduation-register/graduation-register.component.html
@@ -45,7 +45,7 @@
 
         <div id="btn">
           <div class="button-container">
-            <button pButton type="submit" label="Salvar" ></button>
+            <button (click)="hideIframe()" pButton type="submit" label="Salvar" ></button>
           </div>
         </div>
 
