atualização no filtro de pesquisa e nas páginas de perfil

--- a/workguru-ui/src/app/candidates/candidate-view-profile/candidate-view-profile.component.html
+++ b/workguru-ui/src/app/candidates/candidate-view-profile/candidate-view-profile.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div id="img">
-    <img src='assets/level_icon.png'>
+    <img src='assets/user_icon.png'>
     <strong><h1>{{candidate.name}}</h1></strong>
     <a [routerLink]="['/candidates/update', candidate.id]" class="p-button p-button-icon-only">
       <i class="pi pi-pen-to-square"></i>
