--- a/workguru-ui/src/app/enterprises/enterprise-view-profile/enterprise-view-profile.component.css
+++ b/workguru-ui/src/app/enterprises/enterprise-view-profile/enterprise-view-profile.component.css
@@ -45,18 +45,34 @@
   color: white;
 }
 
-
-
 .header .p-button{
+  width: 110px;
+  height: 50px;
+  background-color: #7f098a;
+  font-size: 20x;
+}
+
+
+
+.header .p-button-icon-only{
   background-color: transparent;
   border: none;
   margin-left: auto;
+  padding: 0 7%;
 }
 
 .pi-pen-to-square{
   color: white;
   font-size: 200%;
 
+}
+
+#under{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0 5%;
+  font-size: 20px;
 }
 
 
