--- a/workguru-ui/src/app/jobs/job-view/job-view.component.html
+++ b/workguru-ui/src/app/jobs/job-view/job-view.component.html
@@ -19,7 +19,7 @@
     <p>{{ showSalary(job) }}</p>
     <p>{{ showJobArea(job) }}</p>
     <div>
-      <a *ngIf="auth.jwtPayload?.user_type === 'P'" pButton [routerLink]="['/jobs', job.id]" label="Candidatar-se"></a>
+      <a *ngIf="auth.jwtPayload?.user_type === 'P'" pButton (click)="applyJob()" label="Candidatar-se"></a>
     </div>
   </div>
 
